# educational_website

./: .gitignore  Dockerfile  alembic.ini  crud.py  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/versions/: 2024_06_12_2332-4a95e50391fd_create_products_table.py  2024_06_12_2339-8b92a7c20e7b_create_users_table.py  2024_06_13_1002-723f9f3fab79_create_foreugnkey_for_posts.py  2024_06_13_1044-de078a50572b_init_migrations2.py  2024_06_13_1045-54c1be4a9b97_foreign_relations.py  2024_06_13_1157-ebb396bb0934_init.py  2024_06_15_0020-92fa472b4c24_create_order_table.py  2024_06_15_0022-7fb78bd20ff4_create_order_table.py  2024_06_15_0115-26eda95504db_create_order_association_table.py  2024_06_15_2134-430fa686ed92_create_count_field.py
api/: handlers.py  models.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
auth/: README.md  utils.py
certs/: private.key  private.key.pub  public.key
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
db/: session.py
education/: handlers.py  items_views.py
education_site/: .env.template  alembic.ini  main.py
education_site/alembic/: env.py
education_site/api/: __init__.py
education_site/api/api_v1/: __init__.py  (+2 more)
education_site/core/: __init__.py  config.py
education_site/utils/: __init__.py
migrations/: env.py
migrations/versions/: 14f31491a291_create_user.py  56379122099a_comment.py
users/: schemas.py  views.py
(+7 files in other folders)
